--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -3,12 +3,17 @@
     background-color: #f5f5f5;
   }
   
+
+
   .sidebar-search {
-    width: 100%;
+    width: 10%;
+    max-width: 200px;
     padding: 10px;
     margin-bottom: 20px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+    border-radius: 500px;
+    border: 3px solid #ffffff;
+    right:8px;
+    position: relative;
   }
   
   ul {
@@ -35,7 +40,7 @@
     width: 90%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #ffffff;
     border-radius: 5px;
     font-size: 14px;
   }
