updated app css

--- a/src/header2.css
+++ b/src/header2.css
@@ -1,13 +1,21 @@
 /* header2.css */
 
 .header {
-    background-color: #f8f9fa; /* Light background color */
+    background-color: #ffffff; /* Light background color */
     padding: 20px; /* Add some padding */
     border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    box-shadow: 0 4px 8px rgb(255, 255, 255); /* Subtle shadow for depth */
     text-align: center; /* Center-align text */
     position: relative; /* Position the element */
     right:200px;
+    color: white;
+    top:-800px;
+    flex-wrap: 20px;
+    width: 800px;
+    left: 300px;
+
+
+
 
   }
   
@@ -19,6 +27,7 @@
   
   .header p {
     font-size: 1em; /* Standard font size for paragraphs */
-    color: #0085fa; /* Gray color for the text */
+    color: #17181a; /* Gray color for the text */
     margin: 5px 0; /* Space above and below paragraphs */
+    font:serif;
   }
