--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,12 @@
 .App {
   text-align: center;
   width: 100%; /* Set the width to 100% of the parent container */
-  max-width: 8000px; /* Set a maximum width for the container */
+  width: 1000px; /* Set a maximum width for the container */
   margin: 0 auto; /* Center the container horizontally */
   padding: 20px; /* Add some padding for better spacing */
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  position: absolute;
+  color: white;
 }
 
 .App-logo {
@@ -28,7 +30,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .App-link {
