--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -14,9 +14,9 @@
     text-align: center;
     width: 200px;
     height: 150px;
-    /*position: relative;
+    position: relative;
     bottom: 780px;
-    left: 520px; */
+    left: 280px; 
 }
 
 
