--- a/src/genderchart.css
+++ b/src/genderchart.css
@@ -1,13 +1,13 @@
 
 .chart-container {
-    width: 30%;
+    width: 37%;
     height: 410px;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     padding: 10px;
-    border-radius: 8px;
+    border-radius: 20px;
     position:relative;
     bottom:2165px;
-    left:843px;
+    left:830px;
 
   }
   
