--- a/src/influencers.css
+++ b/src/influencers.css
@@ -5,12 +5,12 @@
     max-width: 520px;
     margin: auto;
     padding: 20px;
-    background-color: #f5f7fa;
+    background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     position:relative;
     bottom: 1200px;
-    right: 718px;
+    right: 218px;
 
   }
   
