--- a/src/campaignReach.css
+++ b/src/campaignReach.css
@@ -8,11 +8,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    width: 55%;
+    height: 300px;
     position: relative;
-    bottom:1193px;
-    left: 648px;
+    bottom:1115px;
+    left: 730px;
 }
 
 /* Styling for the map image */
