--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,8 +1,8 @@
 /* sidebar.css */
 
 .sidebar {
-  width: 200px;
-  background-color: #ffffff;
+  width: 209px;
+  background-color: #fbf6f6;
   color: #ecf0f1;
   padding: 20px;
   display: flex;
@@ -22,6 +22,8 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  border-radius: 6%;
+  background-color: rgb(255, 255, 255);
 }
 
 .icon {
@@ -31,25 +33,34 @@
   margin-right: 15px;
 }
 
+
+
 .name1 h4 {
   margin: 0;
-  font-size: 18px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: bold;
   display:flex;
-  color: #2c3e50;
+  color: #000000;
+  position: relative;
+  right: 8px;
+  bottom: 2px;
+
   
 }
 
-.email {  
+.email  {  
   font-size: 12px;
   color: #bdc3c7;
+  position:absolute;
+  top:41px;
+  left:78px;
 }
 
 .sidebar-search {
   width: 100%;
   padding: 8px;
   margin: 15px 0;
-  border-radius: 4px;
+  border-radius: 24px;
   border: none;
   background-color: #ffffff;
   color: #ecf0f1;
@@ -78,9 +89,13 @@
   margin-right: 10px;
   font-size: 18px;
   color: black;
+  font-style: normal;
 }
 .menu-item.home {
   color: #d1d7dbe1; /* Blue color for Home */
+  position: relative;
+  Top: 3px;
+
 }
 
 .menu-item.campaign {
@@ -99,7 +114,7 @@
 .settings-dropdown {
   list-style-type: none;
   padding: 5px 0;
-  background-color: #ffffff;
+  background-color: #dcdcdc;
   border-radius: 4px;
   position: absolute;
   top: 40px;
@@ -152,3 +167,34 @@
 .upgrade-button:hover {
   background-color: #bdc3c7;
 }
+.justus1 {
+  position: relative;
+  left:2px;
+  top:5px;
+}
+
+.justus2{
+  position: relative;
+  right: 160px;
+  top: 24px;
+}
+
+.menu-item.campaign2{
+  position: relative;
+  top:100px;
+  right:50px;
+
+}
+          
+.menu-item.payments2{
+position: relative;
+top: 110px;
+right:50px;
+}
+
+.menu-item.influencer2{
+position: relative;
+top:130px;
+right: 48px;
+}
+          
